[gd_scene load_steps=8 format=2]

[ext_resource path="res://Title_scene/ExitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Title_scene/fade_in/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Title_scene/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Title_scene/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://Title_scene/title_scene.gd" type="Script" id=5]
[ext_resource path="res://Themes/LogoTextTheme.tres" type="Theme" id=6]
[ext_resource path="res://Photos/Background.png" type="Texture" id=7]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 159.832, 88.8011 )
scale = Vector2( 0.353344, 0.231883 )
texture = ExtResource( 7 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 18.0
margin_top = 14.0
margin_right = 307.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_right = 289.0
margin_bottom = 40.0
theme = ExtResource( 6 )
text = "it's dark"
align = 1
uppercase = true

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 44.0
margin_right = 289.0
margin_bottom = 150.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 289.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 6
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 9.0
margin_bottom = 34.0

[node name="Options" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 40.0
margin_bottom = 65.0
scene_to_load = "res://Title_scene/Option_scene/Options.tscn"

[node name="ExitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 71.0
margin_bottom = 96.0
scene_to_load = "quit"

[node name="FadeIn" parent="." instance=ExtResource( 2 )]
visible = false
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
